--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.1"
 services:
   mongo:
     image: "mongo:4.2.1-bionic"
-    restart: always
+    restart: "no"
     ports:
       - "27017:27017"
     environment:
@@ -11,7 +11,7 @@ services:
 
   mongo-express:
     image: mongo-express
-    restart: always
+    restart: "no"
     ports:
       - "8081:8081"
     environment:
